--- a/order_consumer/src/main/resources/templates/pages/waiters/takeorder.html
+++ b/order_consumer/src/main/resources/templates/pages/waiters/takeorder.html
@@ -3,7 +3,7 @@
 <head>
 <base href="<%=basePath%>">
 
-<title>${ORDER_SYS_NAME}-餐厅管理员</title>
+<title>餐厅管理员</title>
 
 <meta http-equiv="pragma" content="no-cache">
 <meta http-equiv="cache-control" content="no-cache">
@@ -14,17 +14,17 @@
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	-->
 
-<link rel="stylesheet" href="../../../static/css/dashboard.css">
+<link rel="stylesheet" href="/css/dashboard.css">
 
 
 
 <!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
-<script src="bootstrap/js/jquery-1.11.1.min.js"></script>
+<script src="/bootstrap/js/jquery-1.11.1.min.js"></script>
 
 <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
-<script src="bootstrap/js/bootstrap.min.js"></script>
+<script src="/bootstrap/js/bootstrap.min.js"></script>
 
-<script type="text/javascript" src="js/ajax.js"></script>
+<script type="text/javascript" src="/js/ajax.js"></script>
 <script type="text/javascript">
 	function begin() {
 		getDishesList(1);
