--- a/order_consumer/src/main/resources/templates/pages/page/waiterpage.html
+++ b/order_consumer/src/main/resources/templates/pages/page/waiterpage.html
@@ -112,7 +112,7 @@
 						<li><span class="navbar-brand">点单界面：当前桌号<span id="tableresult">【】</span></span></li>
 						<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
 							 aria-expanded="false"><img src="" width="24" height="24" class="img-circle"
-                                                        style="border:1px solid #FFF" />&nbsp;&nbsp;当前用户:【${USER_INFO.userAccount}】,身份为服务员
+                                                        style="border:1px solid #FFF" />&nbsp;&nbsp;当前用户:【${userInfo.useraccount}】,身份为服务员
 								<span class="caret"></span></a>
 							<ul class="dropdown-menu">
 								<li style="text-align: center;padding-top: 15px"><img src="/img/ok.png" width="128" height="128"
